# rust-api-actix

./: Cargo.toml  docker-compose.yml
src/: main.rs
src/routes/: catalogo.rs  info.rs  mod.rs  ping.rs
