[package]
name = "rust_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
postgres = "0.19"
tokio-postgres = "0.7.7"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
